Updated portfolio projects

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 
                 <article class="col-md-4 isotopeItem development">
                   <div class="portfolio-item">
-                    <img src="img/portfolio/img7.jpg" alt="" />
+                    <img src="img/portfolio/shecodes_sample_icon.png" alt="" />
                     <div class="portfolio-desc align-center">
                       <div class="folio-info">
                         <h5><a href="#">she.codes</a></h5>
-                        <a href="http://she.codes" target="_blank" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                        <a href="img/portfolio/shecodes_sample.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                       </div><!-- /folio-info -->
                     </div><!-- /portfolio-desc -->
                   </div><!-- /portfolio-item -->
@@ -211,11 +211,11 @@
 
                 <article class="col-md-4 isotopeItem development">
                   <div class="portfolio-item">
-                    <img src="img/portfolio/img8.jpg" alt="" />
+                    <img src="img/portfolio/rc_sample_icon.png" alt="" />
                     <div class="portfolio-desc align-center">
                       <div class="folio-info">
                         <h5><a href="#">RC Production</a></h5>
-                        <a href="http://lenakari.github.io/rc-production/en/index.html" target="_blank" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                        <a href="img/portfolio/rc_sample.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                       </div><!-- /folio-info -->
                     </div><!-- /portfolio-desc -->
                   </div><!-- /portfolio-item -->
@@ -235,11 +235,11 @@
 
                 <article class="col-md-4 isotopeItem development">
                   <div class="portfolio-item">
-                    <img src="img/portfolio/img9.jpg" alt="" />
+                    <img src="img/portfolio/arrastre_sample_icon.png" alt="" />
                     <div class="portfolio-desc align-center">
                       <div class="folio-info">
-                        <h5><a href="#">Tic-tac-toe</a></h5>
-                        <a href="http://lenakari.github.io/tictactoe/tictactoe.html" target="_blank" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                        <h5><a href="#">[a]rrastre</a></h5>
+                        <a href="img/portfolio/arrastre_sample.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                       </div><!-- /folio-info -->
                     </div><!-- /portfolio-desc -->
                   </div><!-- /portfolio-item -->
@@ -253,7 +253,7 @@
                         <h5><a href="#">Sit</a></h5>
                         <a href="img/portfolio/img5.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                       </div><!-- /folio-info -->
-                    </div><!-- /portolfio-desc -->
+                    </div><!-- /portfolio-desc -->
                   </div><!-- /portfolio-item -->
                 </article>
 
