fixed problem with display on mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>Olena Levitsky</title>
@@ -61,12 +62,12 @@
 			</div><! --/row -->
 	    </div> <!-- /container -->
 	</div><! --/headerwrap -->
-	
+
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
 			<h1>Portfolio</h1>
-			
+
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="shecodes.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
 			</div>
@@ -80,7 +81,7 @@
 		</div><! --/row -->
 		<center><h4><a href="assets/img/OlenaLevitskyCV.pdf">View Olena's CV</a></h4></center>
 	</div><! --/container -->
-	
+
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
@@ -109,7 +110,7 @@
 			</div>
 		</div>
 	</div><! --/footerwrap -->
-	
+
 
 
     <!-- Bootstrap core JavaScript
