--- a/hermes/index.html
+++ b/hermes/index.html
@@ -8,6 +8,7 @@
 
     <!-- Hermes CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
     <div id="header"><div class="row header-row"><div class="col-sm-9"><img class="header-logo" src="assets/img/logos/header_logo.png" onclick="navigateTo('home')" /></div> <!-- /col --><div class="col-sm-3"><p id="german-select" onclick="setLanguage('german')"></p><p id="english-select" onclick="setLanguage('english')"></p></div> <!-- /col --></div> <!-- /row --><nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div> <!-- /navbar-header --><div id="navbar" class="navbar-collapse collapse"><ul class="nav navbar-nav"><li id="navigation-home" class="active"><a onclick="navigateTo('home')"></a></li><li id="navigation-services"><a onclick="navigateTo('services')"></a></li><li id="navigation-references"><a onclick="navigateTo('references')"></a></li><li id="navigation-about"><a onclick="navigateTo('about')"></a></li><li id="navigation-application"><a onclick="navigateTo('application')"></a></li><li id="navigation-contact"><a onclick="navigateTo('contact')"></a></li></ul></div><!--/.nav-collapse --></div><!--/.container-fluid --></nav></div> <!-- /header -->
