Updated sample site

--- a/hermes/index.html
+++ b/hermes/index.html
@@ -8,7 +8,25 @@
 
     <!-- Hermes CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <!-- If iPad -->
+    <link type="text/css" rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="assets/css/ipad.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-128.png" sizes="128x128" />
+
   </head>
 
     <div id="header"><div class="row header-row"><div class="col-sm-9"><img class="header-logo" src="assets/img/logos/header_logo.png" onclick="navigateTo('home')" /></div> <!-- /col --><div class="col-sm-3"><p id="german-select" onclick="setLanguage('german')"></p><p id="english-select" onclick="setLanguage('english')"></p></div> <!-- /col --></div> <!-- /row --><nav class="navbar navbar-default"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div> <!-- /navbar-header --><div id="navbar" class="navbar-collapse collapse"><ul class="nav navbar-nav"><li id="navigation-home" class="active"><a onclick="navigateTo('home')"></a></li><li id="navigation-services"><a onclick="navigateTo('services')"></a></li><li id="navigation-references"><a onclick="navigateTo('references')"></a></li><li id="navigation-about"><a onclick="navigateTo('about')"></a></li><li id="navigation-application"><a onclick="navigateTo('application')"></a></li><li id="navigation-contact"><a onclick="navigateTo('contact')"></a></li></ul></div><!--/.nav-collapse --></div><!--/.container-fluid --></nav></div> <!-- /header -->
