Updated meta data

--- a/hermes/index.html
+++ b/hermes/index.html
@@ -11,7 +11,9 @@
     <!-- If iPad -->
     <link type="text/css" rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="assets/css/ipad.css" />
 
+    <title>Hermes Synchron</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Synchronization for cinema, DVD and TV.">
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicon/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png" />
